--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ ul, ol, li, a {
 
 header nav {
   width: 100%;
-  height: 90px;
+  height: 80px;
   background-color: black;
   position: fixed;
   display: flex;
@@ -24,7 +24,7 @@ header nav .topnav {
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  gap: 50px;
+  gap: 70px;
 }
 header nav .topnav div {
   align-items: center;
@@ -85,6 +85,7 @@ main .first_section .firstsectionmainbox #firstsectionitem {
   height: auto;
   display: flex;
   gap: 100px;
+  overflow: hidden;
 }
 main .first_section .firstsectionmainbox #firstsectionitem div {
   width: 200px;
@@ -97,12 +98,64 @@ main .first_section .firstsectionmainbox #firstsectionitem div {
 }
 main .ekmeginasiluretiyoruz {
   width: 100%;
-  height: 100vh;
+  height: auto;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 main .ekmeginasiluretiyoruz .all {
-  width: 60%;
+  width: 70%;
   height: auto;
-  border: 3px solid red;
+  margin-top: 50px;
+  display: flex;
+  overflow: hidden;
+}
+main .ekmeginasiluretiyoruz .all .all-left {
+  width: 50%;
+  height: auto;
+  overflow: hidden;
+}
+main .ekmeginasiluretiyoruz .all .all-right {
+  width: 50%;
+  height: auto;
+  overflow: hidden;
+}
+main .onsiparis {
+  width: 100%;
+  height: 450px;
+  background-image: url(../images/d7323f_a81977b3dd8f477e87d610727057ace2_mv2.png);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+
+footer {
+  width: 100%;
+  height: 190px;
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+footer ul {
+  display: flex;
+  gap: 60px;
+}
+footer ul li a {
+  color: white;
+}
+footer #instalogo {
+  width: auto;
+  height: auto;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }/*# sourceMappingURL=main.css.map */
